--- a/mkdocs_quiz/locales/fr_FR.po
+++ b/mkdocs_quiz/locales/fr_FR.po
@@ -1,95 +1,87 @@
 # French translations for mkdocs-quiz
 msgid ""
 msgstr ""
-"Project-Id-Version: mkdocs-quiz\n"
+"Project-Id-Version:  mkdocs-quiz\n"
 "Report-Msgid-Bugs-To: https://github.com/ewels/mkdocs-quiz/issues\n"
-"POT-Creation-Date: 2024-01-01 00:00+0000\n"
+"POT-Creation-Date: 2025-11-27 21:21+0100\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr_FR\n"
+"Language-Team: fr_FR <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.14.0\n"
 
-#: mkdocs_quiz/plugin.py:574
+#: plugin.py:628
 msgid "Submit"
 msgstr "Soumettre"
 
-#: mkdocs_quiz/js/quiz.js:558
-msgid "Try Again"
-msgstr "Réessayer"
-
-#: mkdocs_quiz/plugin.py:630 mkdocs_quiz/js/quiz.js:647
-msgid "Reset quiz"
-msgstr "Réinitialiser le quiz"
-
-#: mkdocs_quiz/overrides/main.html:36 mkdocs_quiz/overrides/main.html:60
-msgid "Reset"
-msgstr "Réinitialiser"
-
-#: mkdocs_quiz/js/quiz.js:596 mkdocs_quiz/js/quiz.js:734
-msgid "Correct answer!"
-msgstr "Bonne réponse !"
-
-#: mkdocs_quiz/js/quiz.js:643 mkdocs_quiz/js/quiz.js:756
-msgid "Incorrect answer."
-msgstr "Mauvaise réponse."
-
-#: mkdocs_quiz/js/quiz.js:643 mkdocs_quiz/js/quiz.js:756
-msgid "Incorrect answer. Please try again."
-msgstr "Mauvaise réponse. Veuillez réessayer."
-
-#: mkdocs_quiz/overrides/main.html:12
-msgid "Quiz Progress"
-msgstr "Progression du quiz"
-
-#: mkdocs_quiz/overrides/main.html:18 mkdocs_quiz/overrides/main.html:55
-msgid "Answered:"
-msgstr "Répondues :"
-
-#: mkdocs_quiz/overrides/main.html:33 mkdocs_quiz/overrides/main.html:58
-msgid "Correct:"
-msgstr "Correctes :"
-
-#: mkdocs_quiz/plugin.py:617
-msgid "questions answered"
-msgstr "questions répondues"
-
-#: mkdocs_quiz/plugin.py:621
-msgid "correct"
-msgstr "correctes"
-
-#: mkdocs_quiz/plugin.py:585
+#: plugin.py:643
 msgid "Question {n}"
 msgstr "Question {n}"
 
-#: mkdocs_quiz/plugin.py:625
+#: plugin.py:673
+msgid "Quiz Progress"
+msgstr "Progression du quiz"
+
+#: plugin.py:674
+msgid "questions answered"
+msgstr "questions répondues"
+
+#: plugin.py:675
+msgid "correct"
+msgstr "correctes"
+
+#: plugin.py:676
 msgid "Quiz Complete!"
 msgstr "Quiz terminé !"
 
-#: mkdocs_quiz/js/quiz.js:327
+#: plugin.py:677 plugin.py:717
+msgid "Reset quiz"
+msgstr "Réinitialiser le quiz"
+
+#: plugin.py:714
+msgid "Quiz results are saved to your browser's local storage and will persist between sessions."
+msgstr "Les résultats du quiz sont enregistrés dans le stockage local de votre navigateur et persisteront entre les sessions."
+
+#: js/quiz.js:334
 msgid "Outstanding! You aced it!"
 msgstr "Exceptionnel ! Vous avez tout réussi !"
 
-#: mkdocs_quiz/js/quiz.js:330
+#: js/quiz.js:337
 msgid "Great job! You really know your stuff!"
 msgstr "Excellent travail ! Vous maîtrisez vraiment le sujet !"
 
-#: mkdocs_quiz/js/quiz.js:333
+#: js/quiz.js:340
 msgid "Good effort! Keep learning!"
 msgstr "Bon effort ! Continuez à apprendre !"
 
-#: mkdocs_quiz/js/quiz.js:336
+#: js/quiz.js:343
 msgid "Not bad, but there's room for improvement!"
 msgstr "Pas mal, mais il y a de la place pour s'améliorer !"
 
-#: mkdocs_quiz/js/quiz.js:339
+#: js/quiz.js:346
 msgid "Better luck next time! Keep trying!"
 msgstr "Plus de chance la prochaine fois ! Continuez d'essayer !"
 
-#: mkdocs_quiz/js/quiz.js:455 mkdocs_quiz/js/quiz.js:513 mkdocs_quiz/js/quiz.js:526
+#: js/quiz.js:462
 msgid "Are you sure you want to reset the quiz? This will clear your progress."
 msgstr "Êtes-vous sûr de vouloir réinitialiser le quiz ? Cela effacera votre progression."
 
-#: mkdocs_quiz/plugin.py:646
-msgid "Quiz results are saved to your browser's local storage and will persist between sessions."
-msgstr "Les résultats du quiz sont enregistrés dans le stockage local de votre navigateur et persisteront entre les sessions."
+#: js/quiz.js:579
+msgid "Try Again"
+msgstr "Réessayer"
+
+#: js/quiz.js:617 js/quiz.js:755
+msgid "Correct answer!"
+msgstr "Bonne réponse !"
+
+#: js/quiz.js:664 js/quiz.js:777
+msgid "Incorrect answer. Please try again."
+msgstr "Mauvaise réponse. Veuillez réessayer."
+
+#: js/quiz.js:664 js/quiz.js:777
+msgid "Incorrect answer."
+msgstr "Mauvaise réponse."
