--- a/mkdocs_quiz/locales/fr.po
+++ b/mkdocs_quiz/locales/fr.po
@@ -6,7 +6,7 @@ msgstr ""
 "POT-Creation-Date: 2025-11-27 22:12+0100\n"
 "PO-Revision-Date: 2025-11-27 21:19+0000\n"
 "Last-Translator: Phil Ewels <phil.ewels@seqera.io>\n"
-"Language: fr_FR\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
