--- a/mkdocs_quiz/locales/pt-BR.po
+++ b/mkdocs_quiz/locales/pt-BR.po
@@ -7,7 +7,7 @@ msgstr ""
 "PO-Revision-Date: 2025-11-27 20:58-0300\n"
 "Last-Translator: dunossauro <mendesxeduardo@gmail.com>\n"
 "Language-Team: \n"
-"Language: pt_BR\n"
+"Language: pt-BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
