--- a/mkdocs_quiz/locales/eo.po
+++ b/mkdocs_quiz/locales/eo.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: mkdocs-quiz\n"
 "Report-Msgid-Bugs-To: https://github.com/ewels/mkdocs-quiz/issues\n"
 "POT-Creation-Date: 2025-11-27 22:12+0100\n"
-"PO-Revision-Date: 2025-11-30 07:45+0000\n"
-"Last-Translator: Claude <noreply@anthropic.com>\n"
+"PO-Revision-Date: 2026-01-28 09:27+0000\n"
+"Last-Translator: Phil Ewels <phil.ewels@seqera.io>\n"
 "Language: eo\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -102,3 +102,7 @@ msgstr "Ĝusta:"
 #: overrides/main.html
 msgid "Reset"
 msgstr "Restarigi"
+
+#: js/quiz.js:677
+msgid "(empty)"
+msgstr "(malplena)"
