--- a/mkdocs_quiz/locales/es.po
+++ b/mkdocs_quiz/locales/es.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkdocs-quiz\n"
 "Report-Msgid-Bugs-To: https://github.com/ewels/mkdocs-quiz/issues\n"
-"PO-Revision-Date: 2025-11-30 07:45+0000\n"
-"Last-Translator: Claude <noreply@anthropic.com>\n"
+"PO-Revision-Date: 2026-01-28 09:27+0000\n"
+"Last-Translator: Phil Ewels <phil.ewels@seqera.io>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -104,3 +104,7 @@ msgstr "Correctas:"
 #: overrides/main.html
 msgid "Reset"
 msgstr "Reiniciar"
+
+#: js/quiz.js:677
+msgid "(empty)"
+msgstr "(vacío)"
